2009-08-24  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/map_builder.php,
	pandora_console/include/functions_visual_map.php: Fixed bug in visual map,
	in edit and view, this bug relate with add agent graphic element without
	module defined.
	
2009-08-20  Sancho Lerena  <slerena@artica.es>

	* godmode/agentes/configurar_agente.php: Fixed bug with agent address 
	edition (return 0 when no address was supplied).

	* godmode/modules/manage_network_components.php: Fixed typo.

2009-08-19  Sancho Lerena  <slerena@artica.es>

	* pandoradb.sql: A missing table was necessary to be added to allow recon
	to make scans depending on TCP ports profile (recon_ports field).

	* manage_recontask.php, manage_recontask_form.php: Added recon_port field
	to recon management system. Added some links and some aditional formatting.
	
	* include/funcions_db.php: Improved format_array_to_where_clause_sql()
	to accept condicionals like > and < in the array field.
	
	* operation/servers/view_server_detail.php: Quick link to recontask server
	admin.

2009-08-18  Miguel de Dios  <miguel.dedios@artica.es>
	
	* install.php: change the style of "div#wizard", "div#install_img" and add
	the div clear for grow the box.
	Fixes: #2815089

2009-08-19  Manuel Arostegui <manuel@todo-linux.com>

	* pandora_console.spec: Changed email.

2009-08-18  Sancho Lerena  <slerena@artica.es>

	* pandora_console.spec: A lot of changes, included new dependencies (thinking
	in SUSE 11), and a lot of corrected stuff. Now works 100%.

	* pandoradb_data.sql: Minor updates, version, new SMS alert, new SO type 
	(octopus).


2009-08-18  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_config.php: add to save the attachment_store config
	value.


2009-08-18  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.php: add filter parameter in ajax that
	pick the modules for select in form. The parameter is filter that don't
	search rows are pending to delete.